--- a/wp-content/themes/codeforrva/app/scss/main.scss
+++ b/wp-content/themes/codeforrva/app/scss/main.scss
@@ -13,3 +13,4 @@ Version: 0.1
 @import "components/footer";
 @import "components/contact";
 @import "components/triptych";
+@import "components/post";
