--- a/wp-content/themes/codeforrva/app/scss/components/_contact.scss
+++ b/wp-content/themes/codeforrva/app/scss/components/_contact.scss
@@ -30,7 +30,7 @@
 
 .contact__info__title{
 	@include font('sans', 400, 3.2rem);
-	color: color(blue);
+	color: color(grey-medium);
 }
 
 .contact__info__text{
@@ -48,14 +48,14 @@
 		@include font('sans', 400, 1.65rem);
 		border-radius: 0;
 		border: none;
-		border: 2px solid color(grey-light);
+		border: 2px solid color(grey-medium);
 		padding: 20px 10px;
 		outline: none;
 		box-shadow: none;
 		&:focus{
 			outline: none;
 			box-shadow: none;
-			border-color: color(blue);
+			border-color: color(green);
 		}
 	}
 	textarea{
@@ -66,15 +66,15 @@
 .contact__submit{
 	@include transition;
 	margin-top: 1.75rem;
-	border: 3px solid color(grey-light);
+	border: 3px solid color(grey-medium);
 	@include font('sans', 400, 1.55rem);
 	text-transform: uppercase;
 	color: color(grey-medium);
 	padding: 5px 15px;
 	background: none;
 	&:hover{
-		background: color(blue);
-		border-color: color(blue);
+		background: color(green);
+		border-color: color(green);
 		color: #fff;
 	}
 }
