--- a/wp-content/themes/codeforrva/app/scss/components/_triptych.scss
+++ b/wp-content/themes/codeforrva/app/scss/components/_triptych.scss
@@ -12,7 +12,7 @@
 	letter-spacing: 1px;
 	text-align: center;
 	margin-bottom: 3rem;
-	color: color(blue);
+	color: color(green);
 }
 
 .triptych__panel__text,
