--- a/wp-content/themes/codeforrva/app/scss/main.scss
+++ b/wp-content/themes/codeforrva/app/scss/main.scss
@@ -8,6 +8,7 @@ Version: 0.1
 @import "base/functions";
 @import "base/style-guide";
 
+@import "components/button";
 @import "components/header";
 @import "components/billboard";
 @import "components/footer";
