--- a/wp-content/themes/codeforrva/app/scss/base/_style-guide.scss
+++ b/wp-content/themes/codeforrva/app/scss/base/_style-guide.scss
@@ -15,7 +15,8 @@ a{
 	@include transition;
 	text-decoration: none;
 	color: color(green);
-	&:hover{
+	&:hover,
+	&:focus{
 		text-decoration: none;
 		border-bottom: 1px solid color(green);
 		color: color(green);
