--- a/wp-content/themes/codeforrva/app/scss/components/_footer.scss
+++ b/wp-content/themes/codeforrva/app/scss/components/_footer.scss
@@ -1,9 +1,18 @@
 .footer{
 	width: 100%;
-	background: color(grey-light);
+	background: url(../img/footer-pattern.png) center center no-repeat;
+	background-size: cover;
 	padding: 2.5rem 0;
-
-
+	position: relative;
+	&:after{
+		content: '';
+		width: 100%;
+		height: 100%;
+		top:0;
+		left: 0;
+		background: rgba(255,255,255,0.55);
+		position: absolute;
+	}
 }
 
 #map.leaflet-container{cursor: default;}
@@ -11,6 +20,12 @@
 .footer__logo{
 	width: 80px;
 	float: left;
+	z-index: 10;
+}
+
+.footer .container{
+	position: relative;
+	z-index: 10;
 }
 
 .footer__nav{
