front-page tweaks.

--- a/wp-content/themes/codeforrva/app/scss/components/_triptych.scss
+++ b/wp-content/themes/codeforrva/app/scss/components/_triptych.scss
@@ -1,9 +1,9 @@
 .triptych{
-	padding: 5rem 0;
-}
-
-.triptych__panel{
-
+	padding: 7rem 0;
+	.container{
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 .triptych__panel__title{
