--- a/wp-content/themes/codeforrva/app/scss/components/_footer.scss
+++ b/wp-content/themes/codeforrva/app/scss/components/_footer.scss
@@ -1,18 +1,8 @@
 .footer{
 	width: 100%;
-	background: url(../img/footer-pattern.png) center center no-repeat;
-	background-size: cover;
+	background: color(grey-light);
 	padding: 2.5rem 0;
 	position: relative;
-	&:after{
-		content: '';
-		width: 100%;
-		height: 100%;
-		top:0;
-		left: 0;
-		background: rgba(255,255,255,0.55);
-		position: absolute;
-	}
 }
 
 #map.leaflet-container{cursor: default;}
